Use only GET and POST
It's not a REST API anyway
